# devposthackthon

./: .gitignore  Dockerfile  README.md  pyproject.toml
a2a/: agent-card.json
deploy/: README.md  agent-engine-deploy.py  cloudrun-service.yaml
docs/: architecture.md  demo-script.md  evaluation-plan.md  rules-compliance.md  submission.md  track2-optimization.md  track3-readiness.md
gemini_enterprise/: README.md  agent-card.json
marketplace/: README.md  listing.md  producer-portal-checklist.md  security.md  solution.yaml
sample_data/: accounts.json  energy_buildings.json  energy_occupancy.json  energy_pricing_events.json  energy_simulation_cases.json  energy_weather_events.json  interactions.json  opportunities.json  support_tickets.json
startup_ops_agent/: .env.example  __init__.py  a2a_app.py  agent.py  api.py  cli.py  config.py  energy_models.py  energy_repository.py  energy_service.py  evaluation.py  instructions.py  logging_config.py  mcp_server.py  models.py  optimizer.py  policy.py  repository.py  service.py  tools.py
tests/: test_a2a.py  test_api.py  test_energy_service.py  test_evaluation.py  test_policy.py  test_service.py  test_tools.py
